# camlbot

./: .gitignore  README.md  board.ml  board.mli  convert_legacy_ckpt.ml  dune  game.ml  game.mli  main.ml  td.ml  td.mli  torch_smoke.ml  torch_train.ml  ubgi_engine.ml
docs/: WEIGHTS_CONVERSION.md
scripts/: tf_ckpt_to_npz.py
